--- a/default.hbs
+++ b/default.hbs
@@ -71,6 +71,11 @@
         b.parentNode.insertBefore(a, b);
       })(document, 'script', 'https://assets.producthunt.com/assets/upwigloader.js');
     </script>
+
+
+    <div class="cookie-popup">
+
+    </div>
     
 </body>
 </html>
