--- a/index.hbs
+++ b/index.hbs
@@ -11,8 +11,8 @@
 {{!-- The main content area --}}
 <main id="content" role="main">
 	<div class="main-wrapper">
-		<div class="loop">
+		<section class="loop">
 			{{> post_loop}}
-		</div>
+		</section>
 	</div>
 </main>
