--- a/partials/theme_header.hbs
+++ b/partials/theme_header.hbs
@@ -3,7 +3,7 @@
                 <div class="row">
                     <div class="col-md-3 col-6 logo ml-auto">
                         <div class="blog-logo home">
-                            <a href="https://www.webhacks.co/" title="{{@blog.title}}">
+                            <a href="/" title="{{@blog.title}}">
                                 {{#if @blog.logo}}
                                     <img src="{{@blog.logo}}" alt="{{@blog.title}}" />
                                 {{else}}
@@ -13,9 +13,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-6"></div>
-
-                    <div class="col-md-3 col-6 text-right btns">
+                    <div class="col-md-9 col-6 text-right btns">
                         <a href="#" class="search" data-toggle="modal" data-target="#search">
                             <svg width="26" height="26" viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg"><path d="M1.29775 9.197c0-4.52 3.677-8.197 8.196-8.197 4.52 0 8.198 3.677 8.198 8.197s-3.678 8.197-8.198 8.197c-4.519 0-8.196-3.677-8.196-8.197zm15.033 6.13c1.462-1.629 2.361-3.774 2.361-6.13 0-5.071-4.126-9.197-9.198-9.197-5.071 0-9.196 4.126-9.196 9.197 0 5.071 4.125 9.197 9.196 9.197 2.356 0 4.501-.898 6.13-2.36l8.523 8.522c.097.098.225.146.353.146.128 0 .256-.048.354-.146.195-.195.195-.512 0-.707l-8.523-8.522z" fill="#B9B2A2" fill-rule="evenodd"/></svg>
                         </a>
