--- a/partials/theme_header.hbs
+++ b/partials/theme_header.hbs
@@ -36,7 +36,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-6 ml-auto">
-                                        <div class="blog-logo">
+                                        <div class="text-center blog-logo">
                                             <a href="{{@blog.url}}" title="{{@blog.title}}">
                                                 {{#if @blog.logo}} <img src="{{@blog.logo}}" alt="{{@blog.title}}" /> {{else}}<span>{{@blog.title}}</span>{{/if}} 
                                             </a>
@@ -75,7 +75,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-6 ml-auto">
-                                        <div class="blog-logo">
+                                        <div class="text-center blog-logo">
                                             <a href="{{@blog.url}}" title="{{@blog.title}}">
                                                 {{#if @blog.logo}} <img src="{{@blog.logo}}" alt="{{@blog.title}}" /> {{else}}<span>{{@blog.title}}</span>{{/if}} 
                                             </a>
@@ -114,7 +114,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-6 ml-auto">
-                                        <div class="blog-logo modal">
+                                        <div class="text-center blog-logo">
                                             <a href="{{@blog.url}}" title="{{@blog.title}}">
                                                 {{#if @blog.logo}} <img src="{{@blog.logo}}" alt="{{@blog.title}}" /> {{else}}<span>{{@blog.title}}</span>{{/if}} 
                                             </a>
