--- a/partials/post_loop.hbs
+++ b/partials/post_loop.hbs
@@ -1,9 +1,9 @@
 <div id="particles-js-again"></div>
 
 <div class="container">
-	<h3>Get Up and Running with our Featured Hacks</h3>
+	<h3>Free Resources to Help You Get Started</h3>
 
-	<div class="featured-posts">
+	<div class="featured-posts" id="hacks">
 
 	<h5 id="tag-title">Featured</h5>
 		<ul class="list-tags">
