--- a/partials/theme_footer.hbs
+++ b/partials/theme_footer.hbs
@@ -5,10 +5,23 @@
             <div class="col-md-12">
                 <div class="footer-content">
                     <div class="row">
-                        <div class="col-md-6">            
-                            <h3>About</h3>
+                        <div class="col-md-3 col-sm-6 col-xs-6">     
+                            <ul>
+                                <li>About</li>
+                                <li>Pricing</li>
+                                <li>Support</li>
+                                <li>Making of</li>
+                            </ul>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-3 col-sm-6 col-xs-6">            
+                            <ul>
+                                <li>Tools</li>
+                                <li>Deals</li>
+                                <li>Roadmap</li>
+                                <li>Resources</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
                             <h3>Get a new hack each week</h3>
                             {{subscribe_form
                                 form_class="gh-signin"
@@ -20,7 +33,10 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p class="copyright">&copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a>. All Right Reserved.</p>
+                            <p class="copyright">
+                            Just another side-project from <a href="https://twitter.com/ryan_dimascio/?r=webhacks" target="_blank">@ryan_dimascio</a>
+                            <br>&copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a>. All Right Reserved.
+                            </p>
                         </div>
                     </div>
                 </div>
