--- a/default.hbs
+++ b/default.hbs
@@ -43,6 +43,9 @@
     {{!-- jQuery Parallax --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-parallax/1.1.3/jquery-parallax-min.js"></script>
 
+    {{!-- Tilt --}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
+
     {{!-- Ghost outputs important scripts and data with this tag --}}
     {{ghost_foot}}
     
