--- a/partials/theme_footer.hbs
+++ b/partials/theme_footer.hbs
@@ -7,18 +7,18 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-6 col-xs-6">     
                             <ul>
-                                <li>About</li>
-                                <li>Pricing</li>
-                                <li>Support</li>
-                                <li>Making of</li>
+                                <li><a href="/about/">About</a></li>
+                                <li><a href="/pricing/">Pricing</a></li>
+                                <li><a href="/support/">Support</a></li>
+                                <li><a href="https://dev.to/rdimascio/" target="_blank">Making of</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-6">            
                             <ul>
-                                <li>Tools</li>
-                                <li>Deals</li>
-                                <li>Roadmap</li>
-                                <li>Resources</li>
+                                <li><a href="/tools/">Tools</a></li>
+                                <li><a href="/deals/">Deals</a></li>
+                                <li><a href="https://trello.com/b/IzDWOoE0" target="_blank">Roadmap</a></li>
+                                <li><a href="https://github.com/rdimascio/webhacks-resources/">Resources</a></li>
                             </ul>
                         </div>
                         <div class="col-md-6 col-sm-12">
@@ -34,7 +34,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <p class="copyright">
-                            Just another side-project from <a href="https://twitter.com/ryan_dimascio/?r=webhacks" target="_blank">@ryan_dimascio</a>
+                            Just a side-project from <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fwww.webhacks.co%2F&screen_name=ryan_dimascio" target="_blank">@ryan_dimascio</a>
                             <br>&copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a>. All Right Reserved.
                             </p>
                         </div>
@@ -43,3 +43,7 @@
             </div>
         </div>
     </footer>
+
+    curl -d '{"body":"testing", "project":"webhacks"}' -H "Content-Type: application/json" "Authorization: Bearer cUK6BpEnFr3RxLmhAs49eLY" -X POST https://wip.chat/graphql
+
+    curl -d "body=testing&project=webhacks" -H "Authorization: Bearer cUK6BpEnFr3RxLmhAs49eLY" -X POST https://wip.chat/graphql
