final landing page design

--- a/partials/theme_footer.hbs
+++ b/partials/theme_footer.hbs
@@ -1,4 +1,4 @@
-    <div class="backdrop"></div>
+    <div id="particles-js"></div>
 
     <footer class="site-footer container">
         <div class="row">
