--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -748,7 +748,7 @@ header .nav ul li {
     background-color: rgba(31, 37, 41, 0.1); }
 
 #hero .illustration {
-    padding: 4em 0; }
+    margin: 4em 0; }
     
 
 #hero .illustration svg {
@@ -762,16 +762,16 @@ header .nav ul li {
 
 #hero .floating_checklist {
     position: absolute;
-    bottom: 10em; }
+    bottom: 6em; }
     @media (max-width: 590px) {
         #hero .floating_checklist {
-            bottom: 8em; } }
+            bottom: 4em; } }
     @media (max-width: 490px) {
         #hero .floating_checklist {
-            bottom: 6em; } }
+            bottom: 2em; } }
     @media (max-width: 390px) {
         #hero .floating_checklist {
-            bottom: 4em; } }
+            bottom: 0; } }
 
 /*.floating_checklist .item_box:nth-child(even) {
     -webkit-transform: rotate(1.1deg);
