--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -674,8 +674,7 @@ header .nav ul li {
     left: 1em;
     top: 1em;
     width: 3.3em;
-    height: 3.3em;
-    border-radius: 50%; }
+    height: 3.3em; }
 
 .featured h3 {
     font-size: 15px;
