--- a/partials/home_hero.hbs
+++ b/partials/home_hero.hbs
@@ -39,7 +39,7 @@
 						    </g>
 						</svg>
 					</span>
-						&nbsp; launch a business
+						&nbsp; launch a landing page
 				</div>
 				<div class="row item_box">
 					<span>
