--- a/partials/theme_head.hbs
+++ b/partials/theme_head.hbs
@@ -15,17 +15,17 @@
 
     {{!-- Page Meta --}}
     <title>{{meta_title}}</title>
-    <meta name="description" content="Create unique animated portfolio in 5 minutes. WordPress theme by itmeo team.">
-    <meta name="keywords" content="wordpress, wp, theme, website, portfolio, animation, css3, creative">
-    <meta property="og:title" content="Premium Portfolio WordPress Theme">
-    <meta property="og:description" content="Create unique animated portfolio in 5 minutes.">
+    <meta name="description" content="Build anything for free, without coding.">
+    <meta name="keywords" content="growth, hacks, marketing">
+    <meta property="og:title" content="Web Hacks">
+    <meta property="og:description" content="Build anything for free, without coding.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://itmeo.com/brut-premium-wordpress-theme">
-    <meta property="og:image" content="https://itmeo.com/brut-premium-wordpress-theme/opengraph_1200_630.jpg">
+    <meta property="og:url" content="https://webhacks.co">
+    <meta property="og:image" content="">
 
     {{!-- Social Meta --}}
-    <meta name="twitter:description" content="Create unique animated portfolio in 5 minutes.">
-    <meta name="twitter:title" content="Premium Portfolio WordPress Theme by @itmeohq">
+    <meta name="twitter:description" content="Build anything for free, without coding.">
+    <meta name="twitter:title" content="Web Hacks by @ryan_dimascio">
     <meta name="twitter:domain" content="itmeohq">
     <meta name="twitter:image:src" content="">
 
