update twitter link

--- a/partials/theme_footer.hbs
+++ b/partials/theme_footer.hbs
@@ -34,7 +34,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <p class="copyright">
-                            Just a side-project from <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fwww.webhacks.co%2F&screen_name=ryan_dimascio" target="_blank">@ryan_dimascio</a>
+                            Just a side-project from <a href="https://twitter.com/ryan_dimascio" onclick="window.open('https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fwebhacks.co%2F&screen_name=ryan_dimascio','newwindow','width=500,height=650,resizable=yes,scrollbars=yes'); return false;">@ryan_dimascio</a>
                             <br>&copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a>. All Right Reserved.
                             </p>
                         </div>
