--- a/partials/post_loop.hbs
+++ b/partials/post_loop.hbs
@@ -1,4 +1,4 @@
-<div id="particles-js-again"></div>
+<div id="particles-js-loop"></div>
 
 <div class="container">
 	<h3>Free Resources to Help You Get Started</h3>
