--- a/partials/theme_footer.hbs
+++ b/partials/theme_footer.hbs
@@ -1,4 +1,4 @@
-    <div id="particles-js"></div>
+    <div id="particles-js-footer"></div>
 
     <footer class="site-footer container">
         <div class="row">
@@ -33,13 +33,19 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p class="copyright">
-                            Just a side-project from <a href="https://twitter.com/ryan_dimascio" onclick="window.open('https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fwebhacks.co%2F&screen_name=ryan_dimascio','newwindow','width=500,height=650,resizable=yes,scrollbars=yes'); return false;">@ryan_dimascio</a>
-                            <br>&copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a>. All Right Reserved.
-                            </p>
+                            <p class="copyright">&copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a>. All Right Reserved.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+
+    <div class="attribution">
+        <div class="container cta">
+            <div class="row">
+                <img class="" src="" />
+                <a href="https://twitter.com/ryan_dimascio" onclick="window.open('https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fwebhacks.co%2F&screen_name=ryan_dimascio','newwindow','width=500,height=650,resizable=yes,scrollbars=yes'); return false;">@ryan_dimascio</a>
+            </div>
+        </div>
+    </div>
