--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,11 +594,40 @@ header .nav ul li {
         box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
         transform: translatey(0px); }}
 
-#particles-js,
-#particles-js-again {
+#particles-js-header,
+#particles-js-loop,
+#particles-js-footer {
     position: absolute;
     width: 100%;
     background-color: #283237;
+}
+
+#particles-js-footer {
+    height: 50%;
+}
+
+.attribution {
+    background-color: transparent;
+    bottom: 0;
+    left: 10px;
+    position: fixed;
+    width: auto;
+    z-index: 100;
+}
+
+.cta {
+    background-color: #fff;
+    border: 1px solid #dddfe2;
+    border-radius: 3px;
+    display: inline-block;
+    margin-bottom: -3px;
+    margin-left: 12px;
+    vertical-align: bottom;
+}
+
+.round {
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
 
 .main-wrapper h3 {
