--- a/default.hbs
+++ b/default.hbs
@@ -12,7 +12,7 @@
 
     <div class="main-container">
 
-        <div id="particles-js"></div>
+        <div id="particles-js-header"></div>
     
         {{> theme_header}}
 
