--- a/partials/theme_header.hbs
+++ b/partials/theme_header.hbs
@@ -153,4 +153,17 @@
                     </div>
                 </div>
             </div>
+
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row round">
+                        <div class="pricing-gif">
+                            <div style="width:100%;height:0;padding-bottom:110%;position:relative;">
+                                <iframe src="https://giphy.com/embed/P2x5ZIc8CEcNnO1WdM" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </header>
