--- a/default.hbs
+++ b/default.hbs
@@ -10,6 +10,28 @@
 </head>
 <body class="{{body_class}} nav-closed" {{#author}}data-author="{{slug}}"{{/author}} {{#tag}}data-tag="{{slug}}"{{/tag}}>
 
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '251432818986261',
+          cookie     : true,
+          xfbml      : true,
+          version    : '3.0'
+        });
+          
+        FB.AppEvents.logPageView();   
+          
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "https://connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <div class="main-container">
 
         <div id="particles-js-header"></div>
