update footer links

--- a/partials/theme_footer.hbs
+++ b/partials/theme_footer.hbs
@@ -7,18 +7,18 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-6 col-xs-6">     
                             <ul>
+                                <li><a href="/pricing/#faq">FAQ</a></li>
                                 <li><a href="/about/">About</a></li>
-                                <li><a href="/pricing/">FAQ</a></li>
-                                <li><a href="/support/">Privacy</a></li>
-                                <li><a href="https://wip.chat/products/1552/" target="_blank">Making of</a></li>
+                                <li><a href="/pricing/">Pricing</a></li>
+                                <li><a href="/contact/" target="_blank">Contact</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-6">            
+                        <div class="col-md-3 col-sm-6 col-xs-6">
                             <ul>
                                 <li><a href="/tools/">Tools</a></li>
                                 <li><a href="/deals/">Deals</a></li>
-                                <li><a href="https://trello.com/b/IzDWOoE0" target="_blank">Roadmap</a></li>
-                                <li><a href="https://github.com/rdimascio/webhacks-resources/">Resources</a></li>
+                                <li><a href="/market/" target="_blank">Market</a></li>
+                                <li><a href="/resources/">Resources</a></li>
                             </ul>
                         </div>
                         <div class="col-md-6 col-sm-12">
