--- a/default.hbs
+++ b/default.hbs
@@ -81,10 +81,16 @@
     <script type="text/javascript" src="{{asset "js/particles.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/custom.js"}}"></script>
 
+    {{!-- Storefront --}}
+    <script src="https://plasso.com/embed/storefront.1.0.js"></script>
 
-    <div class="cookie-popup">
-
-    </div>
-    
+    {{!-- Sign up mode --}}
+    <script>
+      Plasso.Cart.setup({
+        spaceId: "TPVla8awmo",
+        mode: "signup"
+        overlayColor: "rgba(0, 0, 0, 0.3)"
+      });
+    </script>
 </body>
 </html>
