--- a/default.hbs
+++ b/default.hbs
@@ -88,8 +88,8 @@
     <script>
       Plasso.Cart.setup({
         spaceId: "TPVla8awmo",
+        overlayColor: "rgba(0, 0, 0, 0.3)",
         mode: "signup"
-        overlayColor: "rgba(0, 0, 0, 0.3)"
       });
     </script>
 </body>
