--- a/partials/post_loop.hbs
+++ b/partials/post_loop.hbs
@@ -1,7 +1,7 @@
 <div id="particles-js-loop"></div>
 
 <div class="container">
-	<h3>Free Resources to Help You Get Started</h3>
+	<h3>Free Hacks to Help You Get Started</h3>
 
 	<div class="featured-posts" id="hacks">
 
