update homepage image

--- a/partials/theme_header.hbs
+++ b/partials/theme_header.hbs
@@ -35,8 +35,8 @@
                         <div class="modal-header">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-6 ml-auto">
-                                        <div class="text-center blog-logo">
+                                    <div class="col-md-9 col-6 ml-auto">
+                                        <div class="blog-logo">
                                             <a href="{{@blog.url}}" title="{{@blog.title}}">
                                                 {{#if @blog.logo}} <img src="{{@blog.logo}}" alt="{{@blog.title}}" /> {{else}}<span>{{@blog.title}}</span>{{/if}} 
                                             </a>
@@ -74,8 +74,8 @@
                         <div class="modal-header">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-6 ml-auto">
-                                        <div class="text-center blog-logo">
+                                    <div class="col-md-9 col-6 ml-auto">
+                                        <div class="blog-logo">
                                             <a href="{{@blog.url}}" title="{{@blog.title}}">
                                                 {{#if @blog.logo}} <img src="{{@blog.logo}}" alt="{{@blog.title}}" /> {{else}}<span>{{@blog.title}}</span>{{/if}} 
                                             </a>
@@ -113,8 +113,8 @@
                         <div class="modal-header">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-6 ml-auto">
-                                        <div class="text-center blog-logo">
+                                    <div class="col-md-9 col-6 ml-auto">
+                                        <div class="blog-logo">
                                             <a href="{{@blog.url}}" title="{{@blog.title}}">
                                                 {{#if @blog.logo}} <img src="{{@blog.logo}}" alt="{{@blog.title}}" /> {{else}}<span>{{@blog.title}}</span>{{/if}} 
                                             </a>
