--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,9 @@ input::placeholder {
 /* ==========================================================================
    2. Header
    ========================================================================== */
+header {
+    padding: 15px;
+}
 
 header,
 .modal-header{
@@ -813,7 +816,8 @@ header .nav ul li {
     background-color: rgba(31, 37, 41, 0.1); }
 
 #hero .illustration {
-    margin: 4em 0; }
+    margin: 6em 0; 
+    min-width: 700px; }
     
 
 #hero .illustration svg {
@@ -827,6 +831,7 @@ header .nav ul li {
 
 
 #hero .floating_checklist {
+    display: none;
     position: absolute;
     bottom: 6em; }
     @media (max-width: 590px) {
@@ -2029,9 +2034,6 @@ footer ul li {
     header .blog-logo .home{
         margin-left: -15px;
         text-align: left;
-    }
-    header .modal .blog-logo{
-        text-align: center;
     }
     header .blog-logo a{
         padding: 0;
