--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,6 +602,7 @@ header .nav ul li {
 #particles-js-footer {
     position: absolute;
     width: 100%;
+    height: 100%;
     background-color: #283237;
 }
 
